--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -304,14 +304,14 @@ where d represents the distance between A and B and thus reflects the dependence
 \section{conclusion}
 In this paper, annealing processes of $\gamma$-TiAl alloy after introducing residual stress into prepressing are simulated, and the dynamic evolution process of microdefects and the distribution of residual stress before and after annealing are investigated. The conclusions are as follows:
 
-(1) .
+(1) 
 
 (2) .
 
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
 \funding{This research was funded by the National Natural Science Foundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30) and the Doctoral Research Foundation of Lanzhou University of Technology.}
-
+mark
 \end{document}
 
 
