--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -58,11 +58,24 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 
 \section{Introduction}
 % and brittle rapture failure 
-Poor Ductility at room temperature in Ti-Al alloy strongly affects the safety of fracture of structure like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of TiAl alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and PST crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions \cite{Tang2014}. The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallic structural materials with the consideration of microstructure evolution.
+Poor Ductility at room temperature in Ti-Al alloy strongly affects the safety of fracture of structure like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of TiAl alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and PST crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions \cite{Tang2014}. 
 
-A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit expeiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. In order to understanding the mechanism of brittle fracture, multi-scale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014,Xu2015}. Evolution of void in ductile polycrystalline was studied in nanoscale with MD simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because theyare barriers to dislocation movement \cite{Xiong2015}. 
+A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit expeiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystalline with single aluminum element \cite{Groh2009} and single titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
+
+The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallic structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014,Xu2015}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because theyare barriers to dislocation movement \cite{Xiong2015}. 
 
 However, few literatures covers about deformation mechanism of two phase TiAl alloy and the role of void in atomic scale.
+
+Apart from the difficulty in component manufacturing, defects will form inevitably, e.g. as micro-pores and loosens from casting, surface scratches from machining, and surface indentation from mishandling, and the component reliability can be influenced greatly by these defects.
+
+Regarding the effects of various defects on the behavior of different materials, a lot of investigations have been carried out which show that point defects may affect the properties of materials greatly. The strength of irradiated copper was controlled by dislocation–irradiation defect interactions[10]. Both polycrystals and single crystals of Fe–40 at. Al displayed a rapid initial increase in yield stress with increasing vacancy concentration, followed by a much slower increase at high vacancy concentrations[11]. TiAl, as a relatively brittle material, may be more sensitive to these defects, but the mechanistic study of how different defects influence their properties is limited. It has been shown that artificial rectangular micro-slots in the midsection of Ti–48Al–2Cr–2Nb specimens would decrease its fatigue limit[12]. The high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy could also be lowered by surface defects such as small notches[13]. The resis- tance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation. The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone. The principal effect of foreign-object damage in
+
+
+[11] D. Kiener, P. Hosemann, S.A. Maloy, A.M. Minor, Nat. Mater. 10 (2011) 608–613.
+[12] Y. Yang, I. Baker, Intermetallics 6 (1998) 167–175.
+[13] M. Filippini, S. Beretta, L. Patriarca, G. Pasquero, S. Sabbadini, 11th International Conference on the Mechanical Behavior of Materials (Icm11), 10 (2011) 3677–3682.
+[14] M. Nazmy, M. Staubli, G. Onofrio, V. Lupinc, Scripta Mater. 45 (2001) 787–792.
+
 This paper focus on the evolution of microstructure, tend to find out the connection between microstructure and cold deformation behaviour of two phase TiAl alloy. MD simulaiton including model creation and analysis method is given in Section \ref{section:method}; Results and discussion are in Section \ref{section:RD}.
 
 \section{Molecular Dynamics Simulation }\label{section:method}
@@ -300,13 +313,14 @@ The role of void can be concluded as two main parts: source of dislocation and o
 \tau_0 = Gb/d
 \end{equation}
 
-where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress. As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sidesof a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interiorafter dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systemstowards the spherical nano void in all directions, and are absorbed at fhe spherical void surfaces, the spherical nano void will eventually shrink from the dash circle 
+where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress. As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sidesof a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interiorafter dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systemstowards the spherical nano void in all directions, and are absorbed at spherical void surfaces, the spherical nano void will eventually shrink from the dash circle 
 \section{conclusion}
-In this paper, annealing processes of $\gamma$-TiAl alloy after introducing residual stress into prepressing are simulated, and the dynamic evolution process of microdefects and the distribution of residual stress before and after annealing are investigated. The conclusions are as follows:
+In this paper, deformation behavior of two phase TiAl alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void defect on the properties of two phase TiAl alloy was also studied.  The conclusions are as follows:
 
-(1) 
+(1) The major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha$ phase is harder to be deformed, this inhomogene results in cracks at interface of the two phase. 
 
-(2) .
+(2) The effect of the void defect on the strength of the two phase alloy is sensitive to the location of the void. The void located inside the grain decrease the strength to the material because this type defect weaken the grain thus caused even more serious stress concentration, and the void at phase boundary have less impact on the strength of the material because this type void help to release of local stress at grain boundary.
+
 
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
