--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -62,19 +62,8 @@ Poor Ductility at room temperature in Ti-Al alloy strongly affects the safety of
 
 A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit expeiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystalline with single aluminum element \cite{Groh2009} and single titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
 
-The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallic structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014,Xu2015}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because theyare barriers to dislocation movement \cite{Xiong2015}. 
+The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallic structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because theyare barriers to dislocation movement \cite{Xiong2015}. However, few literatures covers about deformation mechanism of two phase TiAl alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot work carried out on the the effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical properties of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are seneitive to the existence of void defect. Surface defect such as small notches can caused lower high ccle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$ - TiAl is also also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.
 
-However, few literatures covers about deformation mechanism of two phase TiAl alloy and the role of void in atomic scale.
-
-Apart from the difficulty in component manufacturing, defects will form inevitably, e.g. as micro-pores and loosens from casting, surface scratches from machining, and surface indentation from mishandling, and the component reliability can be influenced greatly by these defects.
-
-Regarding the effects of various defects on the behavior of different materials, a lot of investigations have been carried out which show that point defects may affect the properties of materials greatly. The strength of irradiated copper was controlled by dislocation–irradiation defect interactions[10]. Both polycrystals and single crystals of Fe–40 at. Al displayed a rapid initial increase in yield stress with increasing vacancy concentration, followed by a much slower increase at high vacancy concentrations[11]. TiAl, as a relatively brittle material, may be more sensitive to these defects, but the mechanistic study of how different defects influence their properties is limited. It has been shown that artificial rectangular micro-slots in the midsection of Ti–48Al–2Cr–2Nb specimens would decrease its fatigue limit[12]. The high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy could also be lowered by surface defects such as small notches[13]. The resis- tance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation. The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone. The principal effect of foreign-object damage in
-
-
-[11] D. Kiener, P. Hosemann, S.A. Maloy, A.M. Minor, Nat. Mater. 10 (2011) 608–613.
-[12] Y. Yang, I. Baker, Intermetallics 6 (1998) 167–175.
-[13] M. Filippini, S. Beretta, L. Patriarca, G. Pasquero, S. Sabbadini, 11th International Conference on the Mechanical Behavior of Materials (Icm11), 10 (2011) 3677–3682.
-[14] M. Nazmy, M. Staubli, G. Onofrio, V. Lupinc, Scripta Mater. 45 (2001) 787–792.
 
 This paper focus on the evolution of microstructure, tend to find out the connection between microstructure and cold deformation behaviour of two phase TiAl alloy. MD simulaiton including model creation and analysis method is given in Section \ref{section:method}; Results and discussion are in Section \ref{section:RD}.
 
