--- a/draft/ref/BOOKS.bib
+++ b/draft/ref/BOOKS.bib
@@ -6,7 +6,7 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @book{Figure,
 author = {Figure, Supplementary},
 doi = {10.15713/ins.mmj.3},
-file = {:home/alex/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Figure - Unknown - Guide to Scientific Computing in C.pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/Figure/Unknown/Unknown{\_}Guide to Scientific Computing in C.pdf:pdf},
 isbn = {9789004310087},
 number = {c},
 pages = {1--4},
